manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-w-kube
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: j0ne/pingpong:rest-1
        - name: postgres-db
          image: sha256:36f4c5258c1b0693fbb9cfd7981427e4c2a63fb20bda441f95c408b87cea6a04
          volumeMounts:
          - name: pingpong_db
            mountPath: /data
          ports:
          - containerPort: 5432
volumeClaimTemplates:
    - metadata:
        name: pingpong_db
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
