manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops-w-kube
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3003

apiVersion: v1 
kind: Service
metadata:
  name: pingpong-db-svc
  labels:
    app: pingpong-db
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: pingpong-db
